# spectro-cam-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml  rust.yml
benches/: benchmark.rs
examples/: camera.rs  texture.rs
flatpak/: de.der_fetzer.spectro-cam-rs.desktop  de.der_fetzer.spectro-cam-rs.metainfo_template.xml  de.der_fetzer.spectro-cam-rs.yml  de.derfetzer.spectro_cam_rs.desktop  de.derfetzer.spectro_cam_rs.metainfo.xml  de.derfetzer.spectro_cam_rs.yml  install_dependencies.sh
src/: camera.rs  color.rs  config.rs  gui.rs  lib.rs  main.rs  serde.rs  spectrum.rs  spectrum_feed_server.rs  tungsten_halogen.rs
src/gui/: calibration.rs  camera.rs  camera_control.rs  import_export.rs  mod.rs  postprocessing.rs
