[package]
name = "spectro-cam-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "0.11.6"
egui = { version = "0.31.0", features = ["serde"] }
eframe = { version = "0.31.0", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
nokhwa = { version = "0.10.7", features = ["input-v4l", "input-msmf", "input-avfoundation", "output-threaded", "serialize"] }
flume = "0.11.1"
image = "0.25"
nalgebra = "0.33.2"
biquad = "0.5.0"
csv = "1.3.1"
physical_constants = "0.5.0"
egui_plot = { version = "0.31.0", features = ["serde"] }
indexmap = "2.7.1"

[dev-dependencies]
rstest = "0.24"
approx = "0.5.1"
criterion = "0.5"

[profile.release]
lto = "thin"
# debug = true

[[bench]]
name = "benchmark"
harness = false
