[package]
name = "spectro-cam-rs"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "0.11.8"
egui = { version = "0.33.2", features = ["serde"] }
eframe = { version = "0.33.2", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
nokhwa = { version = "0.10.10", features = ["input-v4l", "input-msmf", "input-avfoundation", "output-threaded", "serialize"] }
flume = "0.11.1"
image = "0.25"
nalgebra = "0.34.1"
biquad = "0.5.0"
csv = "1.4.0"
physical_constants = "0.5.0"
egui_plot = { version = "0.34.0", features = ["serde"] }
indexmap = "2.12.0"
palette = { version = "0.7.6", default-features = false, features = ["std"] }

[dev-dependencies]
rstest = "0.26"
approx = "0.5.1"
criterion = "0.7"

[profile.release]
lto = "thin"
# debug = true

[[bench]]
name = "benchmark"
harness = false
